# cpp-base

./: .gitignore  .gitmodules  CMakeList-base.txt  CMakeList-vcpkg.txt  CMakeLists.txt  LICENSE  Makefile  README.md  maskfile.md  vcpkg.json
internals/core/scripts/: script-base.sh  update-base.sh  vcpkg-install.sh
src/: app.cpp  main.cpp
src/configApp/: configApp.cpp  configApp.h
src/include/: logger.h
